--- a/polls/templates/all_fights.html
+++ b/polls/templates/all_fights.html
@@ -10,11 +10,11 @@
 {% endblock %}
 
 {% block header_buttons %}
-    <li class="nav-item active">
+    <li class="nav-item">
         <a class="nav-link" href="{% url 'polls:home'%}">Главная</a>
     </li>
-    <li class="nav-item">
-        <a class="nav-link" href="{%url 'polls:all_fights'%}">Бои</a>
+    <li class="nav-item active">
+        <a class="nav-link" href="#">Бои</a>
     </li>
     <li class="nav-item">
         <a class="nav-link" href="#">О нас</a>
@@ -35,7 +35,7 @@
             <!-- News -->
             <div class="col col-lg-12">
                 <h1 class="pg-title">
-                    Покемоны
+                    Бои
                 </h1>
 
 
@@ -49,14 +49,26 @@
                 <!-- <input type="hidden" id="my_hidden_input"> -->
 
                 <ul class="list-unstyled" style="display: flex; flex-wrap: wrap;">
-                    {% for item in snews%}
-                        <a href="{% url 'polls:pokemon' item.id%}">
-                            <li class="media my-4">
-                                <img class="d-flex mr-3" src="{{item.img}}" alt="Generic placeholder image">                            
+                    {% for item in rooms%}
+                        <a href="{% url 'polls:fight' item.uuid%}" style="width: 50%;">
+                            <li class="media my-4" style="flex-wrap: wrap; text-align: center; justify-content: center;">
+                                <img class="d-flex" src="{{item.your_pokemon.img}}" alt="your_pokemon">
+                                <img class="d-flex" src="{{item.enemy_pokemon.img}}" alt="enemy_pokemon">                            
+                                <br/>
                                 <div class="media-body">
-                                        <h5 class="mt-0 mb-1 font-weight-bold">{{item.name}}</h5>
-                                        <span class="date">Height: {{item.height}}</span>
-                                        <p>ID: {{item.id}}</p>
+                                        <h5 class="mt-0 mb-1 font-weight-bold">{{item.your_pokemon.name}} VS {{item.enemy_pokemon.name}}</h5>
+                                        {%if item.game_ended%}
+                                            <div class="date">Статус: Бой окончен</div>
+                                                     
+                                            {%if item.you_win%}                                            
+                                                <div class="date">Победитель: {{item.your_pokemon.name}}</div>
+                                                {%else%}
+                                                <div class="date">Победитель: {{item.enemy_pokemon.name}}</div>
+                                            {%endif%}                                        
+                                        {%else%}
+                                            <div class="date">Статус: Бой продолжается</div>                                        
+                                        {%endif%}
+
                                 </div>
                             </li>
                         </a>
@@ -66,7 +78,7 @@
                 </ul>
 
                 <nav aria-label="Page navigation example">
-                    <ul class="pagination pg-blue" style="justify-content: center;">
+                    <ul class="pagination pg-blue">
                         {% for page in pages%}
                             {% if page == snews.number %}
                                 <li class="page-item active">
@@ -74,7 +86,7 @@
                                 </li>
                             {% else %}
                                 <li class="page-item">
-                                    <a href="{% url 'polls:home'%}?page={{page}}&title={{title}}" class="page-link"> {{page}} </a>
+                                    <a href="{% url 'polls:home'%}?page={{page}}&pub_date={{pub_date}}&title={{title}}" class="page-link"> {{page}} </a>
                                 </li>
                             {% endif %}
                         {% endfor %}
