Add cashing with Redis server

--- a/polls/templates/news.html
+++ b/polls/templates/news.html
@@ -22,7 +22,7 @@
 {% endblock %}
 
 {% block input_block %}
-    <input type="text" name="title" class="form-control search" placeholder="Введите название" value="{{q}}">
+    <input type="text" name="title" class="form-control search" placeholder="Введите название" value="{{title}}">
 {% endblock %}
 
 {% block container %}
