--- a/polls/templates/page.html
+++ b/polls/templates/page.html
@@ -29,16 +29,16 @@
                 <div class="col col-lg-12">
                         <img class="d-flex mr-3" src="{{pokemon.img}}" alt="Generic placeholder image">
                         <div class="media-body">
-                                <h5 class="mt-0 mb-1 font-weight-bold">{{pokemon.name}}</h5>                                                
-                                <p>Hp: {{pokemon.hp}}</p>
-                                <p>Attack: {{pokemon.attack}}</p>
-                                <p>Defence: {{pokemon.defence}}</p> 
+                                <h5 class="mt-0 mb-1 font-weight-bold pokemon-name">{{pokemon.name}}</h5>                                                
+                                <p class="hp-text">Hp: {{pokemon.hp}}</p>
+                                <p class="hp-attack">Attack: {{pokemon.attack}}</p>
+                                <p class="hp-defence">Defence: {{pokemon.defence}}</p> 
                         </div>
                         <form method="post" action="{%url 'polls:pick_pokemon' pokemon.id%}">{%csrf_token%}
                             {%if is_picked%}
                                 <button type="submit" disabled >Уже выбран</button>                                
                             {%else%}
-                                <button type="submit" >Выбрать</button>
+                                <button type="submit" class="select-button" >Выбрать</button>
                             {%endif%}
                         </form>
 
@@ -46,7 +46,7 @@
                         <form method="post" action="{%url 'polls:create_fight'%}">{%csrf_token%}
                             <input type="text" value="{{picked_id}}" hidden name="your_pokemon_id">
                             <input type="text" value="{{pokemon.id}}" hidden name="enemy_pokemon_id">
-                            <button type="submit">Обычный бой</button>
+                            <button type="submit" class="fight-button">Обычный бой</button>
                         </form>
                         {%endif%}
                         
