--- a/users/templates/request_reset_password.html
+++ b/users/templates/request_reset_password.html
@@ -43,6 +43,7 @@
         <h1>Сброс Пароля</h1>
         <p>Пожалуйста, введите ваш электронный адрес, чтобы получить ссылку для сброса пароля.</p>
         <form action="" method="post">
+            {%csrf_token%}
             {%if error%}
                 <div style="color: red;">{{error}}</div>
             {%endif%}
