--- a/polls/templates/fight.html
+++ b/polls/templates/fight.html
@@ -22,7 +22,7 @@
         <a class="nav-link" href="{% url 'polls:all_fights'%}">Бои</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">О нас</a>
+        <a class="nav-link" href="{%url 'polls:dashboard'%}">Статистика</a>
     </li>
 {% endblock %}
 
