--- a/polls/templates/news.html
+++ b/polls/templates/news.html
@@ -7,6 +7,11 @@
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
         integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <style>
+        ul a{
+            flex: 33% !important
+        }
+    </style>
 {% endblock %}
 
 {% block header_buttons %}
@@ -17,7 +22,7 @@
         <a class="nav-link" href="{%url 'polls:all_fights'%}">Бои</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">О нас</a>
+        <a class="nav-link" href="{%url 'polls:dashboard'%}">Статистика</a>
     </li>    
 {% endblock %}
 
