--- a/polls/templates/quick_fight.html
+++ b/polls/templates/quick_fight.html
@@ -15,10 +15,10 @@
         <a class="nav-link" href="{% url 'polls:home'%}">Главная</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">Популярное</a>
+        <a class="nav-link" href="{%url 'polls:all_fights'%}">Бои</a>
     </li>
     <li class="nav-item">
-        <a class="nav-link" href="#">О нас</a>
+        <a class="nav-link" href="{%url 'polls:dashboard'%}">Статистика</a>
     </li>
 {% endblock %}
 
