--- a/users/templates/login.html
+++ b/users/templates/login.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load socialaccount %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -21,7 +22,14 @@
           <input type="password" placeholder="Пароль" name="password"/>
           <button>Войти</button>
           <input type="hidden" name="next" value="{{ next }}" />
+          <button class="btn btn-outline-info" style="margin-top: 20px;">
+              <a href="{% provider_login_url 'google'%}?next=/">
+                  <i class="fab fa-google"></i>
+                  войти через Google
+              </a>
+          </button>
           <p class="message">Нет аккаунта? <a href="{%url 'polls:register'%}">Регистрация</a></p>
+          <p class="message">Забыли пароль? <a href="{%url 'polls:request_password_reset'%}">Восстановить</a></p>
           <p class="message"><a href="{%url 'polls:home'%}">Главная</a></p>
         </form>
       </div>
